--- a/pel/NEWS
+++ b/pel/NEWS
@@ -1,8 +1,49 @@
 NEWS file for PEL: PHP Exif Library.  A library with support for
 reading and writing Exif headers in JPEG and TIFF images using PHP.
 
-Copyright (C) 2004, 2005, 2006  Martin Geisler.
+Copyright (C) 2004, 2005, 2006, 2007  Martin Geisler.
 Licensed under the GNU GPL, see COPYING for details.
+
+
+PEL Version 0.9.2  March 9th 2010
+*********************************
+
+Notes:
+
+Added a static method, Pel::setJPEGQuality(), for controlling the
+quality for encoding JPEG images. Fixed bug in conversion between
+Julian Day count and UNIX timestamps and removed dependency on the
+calendar PHP extension. Fixed placement of Windows XP tags. Added GPS
+example.
+
+Changes:
+
+* Added an example of how GPS information can be added. Thanks Andac
+  Aydin for contributing and testing this.
+
+* Fixed PelJpegComment::getBytes(): it didn't return anything! Thanks
+  macondos.
+
+* Fixed SF bug #1699489: Incorrect UNIX/Julian conversion.
+
+* PEL 0.9.1 introduced a dependency on the calendar extension for PHP.
+  The necessary functions have now been reimplemented in pure PHP. The
+  patch was supplied by François Pirsch, thanks.
+
+* Fixed doc comment for PelEntryTime, the variables for date() was
+  swapped. Thanks François Pirsch.
+
+* Added static Pel::setJPEGQuality() and Pel::getJPEGQuality() method
+  for setting and getting the quality used when PelJpeg automatically
+  converts an image resource to a JPEG image. Thanks Csaba Gabor for
+  asking about this.
+
+* Moved the XP specific tags from the Exif IFD to the IFD0/1 IFD.
+  Thanks Piotr Golebiowski for noticing this.
+
+* Added links from PelTag::XP_* tags to the PelEntryWindowsString
+  class. Thanks Garrison Locke for indirectly pointing out the need
+  for this.
 
 
 PEL Version 0.9.1  December 19th 2006
